--- a/my_page.html
+++ b/my_page.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="./my_page.css">
     <link rel="stylesheet" href="./my_page_mobile.css">
     <!-- <script src="https://apis.google.com/js/platform.js"></script> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/16c892dcaa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -337,7 +339,7 @@
                 <div class="header row" style="text-align: center; 
                 width: 1110px;
                 margin: 500px auto 20px;" class="">
-                    <div class="line col-4"></div><div class="col-4 header_name" style="padding: 0 !important;">Technical Skills</div><div class="line col-4"></div>
+                    <div class="line col-3 col-md-4"></div><div class="col-6 col-md-4 header_name" style="padding: 0 !important;">Technical Skills</div><div class="line col-3 col-md-4"></div>
                 </div>
                 <div class="follow_mid">
                     <div class="row">
@@ -376,17 +378,17 @@
                 <div class="header row" style="text-align: center; 
                 width: 1110px;
                 margin: 50px auto 20px;" class="">
-                    <div class="line col-5"></div><div class="col-2 header_name">Quotes</div><div class="line col-5"></div>
+                    <div class="line col-3 col-md-5"></div><div class="col-6 col-md-2 header_name">Quotes</div><div class="line col-3 col-md-5"></div>
                 </div>
 
                 <div class="follow_mid">
                     <div class="subheader">Clients' Word</div>
                     <div class="client_quotes row">
-                        <div class="col-1"></div>
-                        <div class="col-5">
+                        <div class="col-md-1"></div>
+                        <div class="col-12 col-md-5">
                             <img class="client_image" src="./images/img1.png">
                             <div class="client_words" style="background: #A25699;">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="34.339" height="23.281" viewBox="0 0 34.339 23.281">
+                                <svg id="inverted_commas" xmlns="http://www.w3.org/2000/svg" width="34.339" height="23.281" viewBox="0 0 34.339 23.281">
                                     <g id="quotes" transform="translate(-4.5 -6.75)">
                                     <path id="Path_2" data-name="Path 2" d="M13.5,17.778H6.874a11.172,11.172,0,0,1,4.376-7.524l2.014-1.47L12.026,6.75,10.013,8.22A13.835,13.835,0,0,0,4.5,19.432v8.148a2.357,2.357,0,0,0,2.25,2.451H13.5a2.357,2.357,0,0,0,2.25-2.451V20.229A2.357,2.357,0,0,0,13.5,17.778Z" fill="#fff"/>
                                     <path id="Path_3" data-name="Path 3" d="M29.25,17.778H22.624A11.172,11.172,0,0,1,27,10.254l2.014-1.47L27.787,6.75,25.762,8.22a13.835,13.835,0,0,0-5.513,11.212v8.148a2.357,2.357,0,0,0,2.25,2.451h6.75a2.357,2.357,0,0,0,2.25-2.451V20.229a2.357,2.357,0,0,0-2.25-2.451Z" transform="translate(7.34)" fill="#fff"/>
@@ -406,10 +408,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-5">
+                        <div class="col-12 col-md-5 change_to_slide">
                             <img class="client_image" src="./images/img2.png">
                             <div class="client_words" style="background: #8256A2;">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="34.339" height="23.281" viewBox="0 0 34.339 23.281">
+                                <svg id="inverted_commas" xmlns="http://www.w3.org/2000/svg" width="34.339" height="23.281" viewBox="0 0 34.339 23.281">
                                     <g id="quotes" transform="translate(-4.5 -6.75)">
                                     <path id="Path_2" data-name="Path 2" d="M13.5,17.778H6.874a11.172,11.172,0,0,1,4.376-7.524l2.014-1.47L12.026,6.75,10.013,8.22A13.835,13.835,0,0,0,4.5,19.432v8.148a2.357,2.357,0,0,0,2.25,2.451H13.5a2.357,2.357,0,0,0,2.25-2.451V20.229A2.357,2.357,0,0,0,13.5,17.778Z" fill="#fff"/>
                                     <path id="Path_3" data-name="Path 3" d="M29.25,17.778H22.624A11.172,11.172,0,0,1,27,10.254l2.014-1.47L27.787,6.75,25.762,8.22a13.835,13.835,0,0,0-5.513,11.212v8.148a2.357,2.357,0,0,0,2.25,2.451h6.75a2.357,2.357,0,0,0,2.25-2.451V20.229a2.357,2.357,0,0,0-2.25-2.451Z" transform="translate(7.34)" fill="#fff"/>
@@ -429,7 +431,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-1"></div>
+                        <div class="col-md-1"></div>
                     </div>
 
                     <div class="subheader">Employees' Word</div>
@@ -485,7 +487,7 @@
                 <div class="header row" style="text-align: center; 
                 width: 1110px;
                 margin: 50px auto 20px;" class="">
-                    <div class="line col-5"></div><div class="col-2 header_name">Hobbies</div><div class="line col-5"></div>
+                    <div class="line col-3 col-md-5"></div><div class="col-6 col-md-2 header_name">Hobbies</div><div class="line col-3 col-md-5"></div>
                 </div>
 
                 <div style="margin-bottom: 50px;">
