--- a/my_page.html
+++ b/my_page.html
@@ -525,18 +525,18 @@
                             </div>
                         </div>
                         <script>
-                            (function() {
-                                // let x = document.getElementById('xxx').offsetTop;
-                                if (window.innerWidth < 768) {
-                                    let y = document.getElementById('yyy').offsetTop;
-                                    $('#yyy').css('margin-top', `-${y}px`);
+                            // (function() {
+                            //     // let x = document.getElementById('xxx').offsetTop;
+                            //     if (window.innerWidth < 768) {
+                            //         let y = document.getElementById('yyy').offsetTop;
+                            //         $('#yyy').css('margin-top', `-${y}px`);
                                     
-                                    let x_width = $('#xxx img').css('width');
-                                    let w = parseInt(x_width.split('px')[0]) + 20
-                                    console.log('x_width', x_width)
-                                    $('#yyy').css('left', `${w}px`);
-                                }
-                            })()
+                            //         let x_width = $('#xxx img').css('width');
+                            //         let w = parseInt(x_width.split('px')[0]) + 20
+                            //         console.log('x_width', x_width)
+                            //         $('#yyy').css('left', `${w}px`);
+                            //     }
+                            // })()
 
                             let top_color = 1;
                             let set_to_calligraphy = true;
